# drought-predictor

./: .gitignore  Dockerfile  README.md  explore.py  pyproject.toml
src/api/: main.py
src/core/: config.py
src/data/: loader.py
src/model/: train.py
