[project]
name = "drought-predictor"
version = "0.1.0"
description = "End-to-end ML pipeline for drought severity prediction using meteorological and soil data. Built with FastAPI, scikit-learn, Docker, and GitHub Actions CI/CD"
authors = [
    {name = "Zebrasino"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "uvicorn (>=0.48.0,<0.49.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.14,<0.16.0)",
    "pytest (>=9.0.3,<10.0.0)"
]
